Nuevo activity agregado y carga de imagen

--- a/Lab22/app/src/main/res/values/strings.xml
+++ b/Lab22/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Lab2</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_agregar_comida">AgregarComida</string>
 
 </resources>
