--- a/Lab22/app/src/main/res/values/strings.xml
+++ b/Lab22/app/src/main/res/values/strings.xml
@@ -5,5 +5,14 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_agregar_comida">AgregarComida</string>
+    <string name="agNuevProd">Agregar nuevo producto</string>
+    <string name="nombre">Nombre</string>
+    <string name="descripcion">Descripción</string>
+    <string name="pais">País</string>
+    <string name="cargarImagen">Cargar Imagen</string>
+    <string name="agregar">Agregar</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="title_activity_ver_productos">VerProductos</string>
+    <string name="ingresar">Ingresar</string>
 
 </resources>
